@@ -203,7 +203,8 @@ struct roster_merge_result
 template <> void dump(roster_merge_result const & result, std::string & out);
 
 void
-roster_merge(roster_t const & left_parent,
+roster_merge(bool uselivelivelivemerge,
+             roster_t const & left_parent,
              marking_map const & left_markings,
              std::set<revision_id> const & left_uncommon_ancestors,
              roster_t const & right_parent,
